--- a/PAC1/src/index.html
+++ b/PAC1/src/index.html
@@ -25,9 +25,25 @@
     </header>
     <main>
         <div class="hero-img">
-            <h1>VINE A TASTAR UNA EXPERIÈNCIA</h1>
-            <p>Un espai per als defensors del medi ambient</p>
+            <h1>VINE A TASTAR LA EXPERIÈNCIA</h1>
+            <p>visita les vinyes amb sabor propi</p>
         </div>
+
+        <div>
+            <p>Reserva la teva visita</p>
+            <img src="" alt=""><!-- buscar imatge reserva -->
+        </div>
+
+        <div>
+            <p>Els nostres productes</p>
+            <img src="" alt=""> <!-- buscar imatge producte (idea: celler, copes de vins) -->
+        </div>
+
+        <div>
+            <p>La nostra història</p>
+            <img src="" alt=""> <!-- buscar imatge de la vinya -->
+        </div>
+
     </main>
     <footer>
     </footer>
