--- a/PAC1/src/index.html
+++ b/PAC1/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Pàgina principal">
+    <meta name="description" content="Pàgina principal de Bacus Terra">
     <link rel="icon" href="/img/monogram-hq.png">
     <title>Bacus Terra</title>
     <link rel="stylesheet" href="./style.css">
@@ -24,28 +24,51 @@
         </nav>
     </header>
     <main>
-        <div class="hero-img">
+        <div class="principal-img">
             <h1>VINE A TASTAR LA EXPERIÈNCIA</h1>
             <p>visita les vinyes amb sabor propi</p>
         </div>
-
-        <div>
-            <p>Reserva la teva visita</p>
-            <img src="" alt=""><!-- buscar imatge reserva -->
+        <div class="contenidor">
+            <a href="#">
+                <div>
+                    <img src="/img/cata-vins.jpg" alt="fotografia de copes de vi per a una cata"><!-- buscar imatge reserva -->
+                    <p>Reserva la teva visita</p>
+                    <p>Anima't i vine a visitar-nos!</p>
+                </div>
+            </a>
+            
+            <a href="#">
+                <div>
+                    <img src="/img/vinya_raim.jpg" alt=""> <!-- buscar imatge producte (idea: celler, copes de vins) -->
+                    <p>Descobreix les nostres experiències</p>
+                    <p>Informa't dels nostres serveis</p>
+                </div>
+            </a>
+            
+            <a href="#">
+                <div>
+                    <img src="/img/vinya.jpg" alt=""> <!-- buscar imatge de la vinya -->
+                    <p>La nostra història</p>
+                    <p>Conèix més sobre la vinya i els nostres vins</p>
+                </div>
+            </a>
         </div>
-
-        <div>
-            <p>Els nostres productes</p>
-            <img src="" alt=""> <!-- buscar imatge producte (idea: celler, copes de vins) -->
-        </div>
-
-        <div>
-            <p>La nostra història</p>
-            <img src="" alt=""> <!-- buscar imatge de la vinya -->
-        </div>
-
     </main>
     <footer>
+        <div class="logo-menu">
+            <a href="index.html"><img src="/img/bacus-terra-blanc.png" alt="logotip bacus terra"></a>
+            <p>2025-2026. Mar Domènech</p>
+        </div>
+        <div class="footer-content">
+            <div class="instaDesktop">
+                <a href="#"><img src="/img/instagram.svg" alt="link a instagram" class="social-media"></a>
+                <a href="#"><img src="/img/x_logo.svg" alt="link a youtube" class="social-media"></a>
+            </div>
+            <div class="footerDesktop">
+                <p><a href="#">Política de privacidad</a></p>
+                <p><a href="#">Política de <i lang="en">cookies</i></a></p>
+                <p><a href="#">Avís legal</a></p>
+            </div>
     </footer>
 </body>
 <script src="./scripts.js"></script>
