--- a/PAC1/src/sobre_nosaltres.html
+++ b/PAC1/src/sobre_nosaltres.html
@@ -31,30 +31,7 @@
     </header>
     <main>
         <div class="principal-img">
-            <h1>VINE A TASTAR LA EXPERIÈNCIA</h1>
-            <p>visita les vinyes amb sabor propi</p>
-        </div>
-        <div class="contenidor">
-            <a href="/src/reserva.html" class="first">
-                <div>
-                    <p class="titol">Reserva la teva visita</p>
-                    <p>Anima't i vine a visitar-nos!</p>
-                </div>
-            </a>
-            
-            <a href="/src\experiencies.html" class="second">
-                <div>
-                    <p class="titol">Descobreix les nostres experiències</p>
-                    <p>Informa't dels nostres serveis</p>
-                </div>
-            </a>
-            
-            <a href="/src\sobre_nosaltres.html" class="third">
-                <div>
-                    <p class="titol">La nostra història</p>
-                    <p>Conèix més sobre la vinya i els nostres vins</p>
-                </div>
-            </a>
+            <h1>Qui som</h1>
         </div>
     </main>
     <footer>
@@ -73,6 +50,6 @@
                 <p><a href="#">Avís legal</a></p>
             </div>
     </footer>
-    <script src="./scripts.js"></script>
 </body>
+<script src="./scripts.js"></script>
 </html>
