--- a/PAC1/src/experiencies.html
+++ b/PAC1/src/experiencies.html
@@ -30,9 +30,48 @@
         </nav>
     </header>
     <main>
-        <div class="principal-img">
+        <div class="experiencies-img">
             <h1>Descobreix les nostres experiències</h1>
         </div>
+        <div class="contenidor">
+            <div class="pack">
+                <div class="">
+                    <img src="/img/pack1_vi_celler.jpg" alt="cop de vi a les vinyes">
+                    <p class="pack-name">Explora i Gaudeix: Visita + Tast Exclusiu</p>
+                </div>
+                <p>Vine a conèixer la nostra vinya i el nostre celler, i gaudeix d'un tast exclusiu dels nostres vins, una experiència única per als amants del vi.</p>
+                <p>Preu per persona: 25€</p>
+                <p>Mínim 2 persones per reserva</p>
+                <form action="/src\reserva.html">
+                    <input type="submit" value="Fes la reserva ara" />
+                </form>
+            </div>
+            <div class="pack">
+                <div class="">
+                    <img src="/img/pack2_cata_vi.jpg" alt="taula amb vins i formatges">
+                    <p class="pack-name">Delícies Gourmet: Tast de Vins i Formatges</p>
+                </div>
+                <p>Descobreix els sabors més exquisits amb un brunch que combina els nostres vins amb una selecció de formatges gourmet.</p>
+                <p>Preu per persona: 40€</p>
+                <p>Mínim 2 persones per reserva</p>
+                <form action="/src\reserva.html">
+                    <input type="submit" value="Fes la reserva ara" />
+                </form>
+            </div>
+            <div class="pack">
+                <div class="">
+                    <img src="/img/pack3_gourmet.jpg" alt="">
+                    <p class="pack-name">L'Experiència Completa: Visita + Cata Premium</p>
+                </div>
+                <p>Viu l'experiència completa amb una visita guiada a la vinya i una cata premium per descobrir els nostres vins més exclusius.</p>
+                <p>Preu per persona: 60€</p>
+                <p>Mínim 2 persones per reserva</p>
+                <form action="/src\reserva.html">
+                    <input type="submit" value="Fes la reserva ara" />
+                </form>
+            </div>
+        </div>
+        
     </main>
     <footer>
         <div class="logo-menu">
