--- a/PAC1/src/reserva.html
+++ b/PAC1/src/reserva.html
@@ -30,16 +30,16 @@
         </nav>
     </header>
     <main>
-        <div class="principal-img">
+        <div class="reserva-img">
             <h1>Reserva</h1>
         </div>
         <form action="" method="post" novalidate>
             <legend for="pack">Sel·lecciona el pack</legend>
             <select id="packs" name="packs" required>
                 <option value="">----</option>
-                <option value="pack1">Pack Visita i Degustació</option>
-                <option value="pack2">Pack Cata</option>
-                <option value="pack3">Pack Complet (visita i cata)</option>
+                <option value="pack1">Explora i Gaudeix: Visita + Tast Exclusiu</option>
+                <option value="pack2">Delícies Gourmet: Tast de Vins i Formatges</option>
+                <option value="pack3">L'Experiència Completa: Visita + Cata Premium</option>
             </select>
             <br>
         
