--- a/PAC1/src/sobre_nosaltres.html
+++ b/PAC1/src/sobre_nosaltres.html
@@ -30,8 +30,16 @@
         </nav>
     </header>
     <main>
-        <div class="principal-img">
+        <div class="quiSom-img">
             <h1>Qui som</h1>
+        </div>
+        <div class="quiSomTxt">
+            <p>A la Vinya Bacus Terra, vivim la passió per la vinya i el vi des de fa generacions. Situats en un entorn privilegiat, cuidem cada cep amb respecte per la terra i la tradició, combinant el saber ancestral amb les tècniques més innovadores.</p>
+            <img src="/img/vinya_quiSom.jpg" alt="">
+            <p>El nostre equip està format per viticultors i enòlegs apassionats que comparteixen un mateix objectiu: elaborar vins autèntics que reflecteixin el caràcter únic del nostre territori. Creiem en una viticultura sostenible, en harmonia amb la natura, per oferir vins de qualitat i amb ànima.</p>
+            <img src="/img/raim_quiSom.jpg" alt="">
+            <p>Descobreix la nostra història, la nostra terra i el nostre compromís amb l'excel·lència. Tesperem per viure una experiència única entre vinyes!</p>
+            <img src="/img/copa_vi_quiSom.jpg" alt="">
         </div>
     </main>
     <footer>
