--- a/PAC1/src/sobre_nosaltres.html
+++ b/PAC1/src/sobre_nosaltres.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pàgina principal de Bacus Terra">
     <link rel="icon" href="/img/monogram-hq.png">
-    <title>Bacus Terra</title>
+    <title>Qui som</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,6 +26,7 @@
                 <li><a href="/src/reserva.html">RESERVA</a></li>
                 <li><a href="/src/experiencies.html">EXPERIÈNCIES</a></li>
                 <li><a href="/src/sobre_nosaltres.html">SOBRE NOSALTRES</a></li>
+                <li><a href="/src\enllaços.html">ENLLAÇOS</a></li>
             </ul>
         </nav>
     </header>
@@ -33,13 +34,16 @@
         <div class="quiSom-img">
             <h1>Qui som</h1>
         </div>
-        <div class="quiSomTxt">
-            <p>A la Vinya Bacus Terra, vivim la passió per la vinya i el vi des de fa generacions. Situats en un entorn privilegiat, cuidem cada cep amb respecte per la terra i la tradició, combinant el saber ancestral amb les tècniques més innovadores.</p>
-            <img src="/img/vinya_quiSom.jpg" alt="">
-            <p>El nostre equip està format per viticultors i enòlegs apassionats que comparteixen un mateix objectiu: elaborar vins autèntics que reflecteixin el caràcter únic del nostre territori. Creiem en una viticultura sostenible, en harmonia amb la natura, per oferir vins de qualitat i amb ànima.</p>
-            <img src="/img/raim_quiSom.jpg" alt="">
-            <p>Descobreix la nostra història, la nostra terra i el nostre compromís amb l'excel·lència. Tesperem per viure una experiència única entre vinyes!</p>
-            <img src="/img/copa_vi_quiSom.jpg" alt="">
+        <div class="tablet-quiSom">
+            <div class="quiSomTxt">
+                <img src="/img/vinya_quiSom.jpg" alt="">
+                <p>Som una petita família que viu i gaudeix del color del vi i de la terra. Ens definim com a apassionats de la vinya i el vi des de tota la vida. Estem tan orgullosos de la nostra vinya i el producte que oferim, que desitgem compartir-ho amb tots aquells que vulguin viure una experiència inoblidable de sabors, tradició i natura.</p>
+                <p>La nostra vinya és un espai ple de vida, on la cura del sòl i el respecte pel medi ambient són la base de tot el que fem. Cada cep és tractat amb dedicació i amor per assegurar-nos que el vi que obtenim sigui de la més alta qualitat, un reflex del nostre compromís amb l'excel·lència i la sostenibilitat.</p>
+                <p>Volem oferir l'oportunitat de veure de prop les vinyes, aprendre sobre el procés d'elaboració del vi i, sobretot, viure el vi de manera directa, com mai abans. Des de la verema fins a la copa, cada pas en el nostre procés de producció és una experiència sensorial única que convidem a descobrir. Els nostres vins no només són el resultat de la terra, sinó també de la passió de la nostra família. Cada ampolla que surt de la nostra bodega carrega una història, una tradició i un amor pel que fem. T'animem a venir, caminar entre les nostres vinyes, respirar l'aire fresc de la terra i tastar els nostres vins, que són tan únics com la nostra història.</p>
+                <p>T'esperem per viure una experiència única entre vinyes!</p>
+                    </p>
+                <img src="/img/raim_quiSom.jpg" alt="">
+            </div>
         </div>
     </main>
     <footer>
