--- a/PAC1/src/experiencies.html
+++ b/PAC1/src/experiencies.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pàgina principal de Bacus Terra">
     <link rel="icon" href="/img/monogram-hq.png">
-    <title>Bacus Terra</title>
+    <title>Descobreix les nostres experiències</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,6 +26,7 @@
                 <li><a href="/src/reserva.html">RESERVA</a></li>
                 <li><a href="/src/experiencies.html">EXPERIÈNCIES</a></li>
                 <li><a href="/src/sobre_nosaltres.html">SOBRE NOSALTRES</a></li>
+                <li><a href="/src\enllaços.html">ENLLAÇOS</a></li>
             </ul>
         </nav>
     </header>
@@ -33,7 +34,7 @@
         <div class="experiencies-img">
             <h1>Descobreix les nostres experiències</h1>
         </div>
-        <div class="contenidor">
+        <div class="contenidor contenidor-exp">
             <div class="pack">
                 <div class="">
                     <img src="/img/pack1_vi_celler.jpg" alt="cop de vi a les vinyes">
@@ -42,9 +43,10 @@
                 <p>Vine a conèixer la nostra vinya i el nostre celler, i gaudeix d'un tast exclusiu dels nostres vins, una experiència única per als amants del vi.</p>
                 <p>Preu per persona: 25€</p>
                 <p>Mínim 2 persones per reserva</p>
-                <form action="/src\reserva.html">
-                    <input type="submit" value="Fes la reserva ara" />
+                <form action="/src/pack1.html">
+                    <input type="submit" value="Més Informació" />
                 </form>
+
             </div>
             <div class="pack">
                 <div class="">
@@ -54,9 +56,12 @@
                 <p>Descobreix els sabors més exquisits amb un brunch que combina els nostres vins amb una selecció de formatges gourmet.</p>
                 <p>Preu per persona: 40€</p>
                 <p>Mínim 2 persones per reserva</p>
-                <form action="/src\reserva.html">
-                    <input type="submit" value="Fes la reserva ara" />
+                <form action="/src/pack2.html">
+                    <input type="submit" value="Més Informació" />
                 </form>
+                <!-- <form action="/src\reserva.html">
+                    <input type="submit" value="Fes la reserva ara" />
+                </form> -->
             </div>
             <div class="pack">
                 <div class="">
@@ -66,8 +71,8 @@
                 <p>Viu l'experiència completa amb una visita guiada a la vinya i una cata premium per descobrir els nostres vins més exclusius.</p>
                 <p>Preu per persona: 60€</p>
                 <p>Mínim 2 persones per reserva</p>
-                <form action="/src\reserva.html">
-                    <input type="submit" value="Fes la reserva ara" />
+                <form action="#">
+                    <input type="submit" value="Més Informació" />
                 </form>
             </div>
         </div>
