--- a/PAC1/src/pack1.html
+++ b/PAC1/src/pack1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pàgina principal de Bacus Terra">
     <link rel="icon" href="/img/monogram-hq.png">
-    <title>Reserva</title>
+    <title>Explora i Gaudeix: Visita + Tast Exclusiu</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,37 +31,15 @@
         </nav>
     </header>
     <main>
-        <div class="reserva-img">
-            <h1>Reserva</h1>
+        <div class="-img">
+            <h1>Explora i Gaudeix: Visita + Tast Exclusiu</h1>
         </div>
-        <div class="contenidor-text-form">
-            <p class="intro-text">"Gaudeix d'una experiència única entre vinyes! Reserva ara la teva visita i descobreix els millors vins de la nostra bodega. Tria el pack que més t'encaixi i assegura't una experiència inoblidable."</p>
+        <div class="">
+            
+            <form action="/src\reserva.html">
+                <input type="submit" value="Fes la reserva ara" />
+            </form>
         </div>
-        <div class="reserva-form">
-            <fieldset>
-                <form action="" method="post" novalidate>
-                    <legend class="title-form">Reserva la teva experiència</legend>
-                    <label for="packs">Sel·lecciona el pack</label>
-                    <select id="packs" name="packs" required>
-                        <option value="">----</option>
-                        <option value="pack1">Explora i Gaudeix: Visita + Tast Exclusiu</option>
-                        <option value="pack2">Delícies Gourmet: Tast de Vins i Formatges</option>
-                        <option value="pack3">L'Experiència Completa: Visita + Cata Premium</option>
-                    </select>
-                    <label for="numero">Nombre de persones (mínim 2):</label>
-                    <input type="number" id="numero" name="persones" required value="2" min="2"/>
-                    <label for="data">Data de la reserva:</label>
-                    <input type="date" id="data" name="data" required />
-                    <label for="email">e-mail de reserva:</label>
-                    <input type="email" id="email" name="email" required />
-                    <label>
-                        <input type="checkbox" name="politica" value="politica" required /> Acepto les condicions i política de privacitat.
-                    </label>
-                    <p id="preu"></p>
-                    <input type="submit" value="Fes la teva reserva"/>
-                </form>
-            </fieldset>
-        </div>        
     </main>
     <footer>
         <div class="logo-menu">
@@ -82,5 +60,3 @@
 </body>
 <script src="./scripts.js"></script>
 </html>
-
-<!-- Vins el Cep. (2025, January 29). Visita y maridaje de 5 quesos con vinos y cava. Enoturismo en Sant Sadurní (Barcelona). | Vins el Cep. Vins El Cep. https://vinselcep.com/es/producto/brunch-en-la-bodega/ -->
