--- a/PAC1/src/experiencies.html
+++ b/PAC1/src/experiencies.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="ca">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Pàgina principal de Bacus Terra">
-    <link rel="icon" href="/img/monogram-hq.png">
-    <title>Descobreix les nostres experiències</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600;700&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/e92ad526ad.js" crossorigin="anonymous"></script> <!-- script per les icones -->
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Pàgina principal de Bacus Terra">
+        <link rel="icon" href="/img/monogram-hq.png">
+        <title>Delícies Gourmet: Tast de Vins i Formatges</title>
+        <link rel="stylesheet" href="./style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600;700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/e92ad526ad.js" crossorigin="anonymous"></script> <!-- script per les icones -->
+    </head>
 <body>
     <header>
         <nav class="menu">
@@ -38,13 +38,13 @@
             <div class="pack">
                 <div class="">
                     <img src="/img/pack1_vi_celler.jpg" alt="cop de vi a les vinyes">
-                    <p class="pack-name">Explora i Gaudeix: Visita + Tast Exclusiu</p>
+                    <p class="pack-name">Explora i Gaudeix: Visita + Tast de Vins</p>
                 </div>
                 <p>Vine a conèixer la nostra vinya i el nostre celler, i gaudeix d'un tast exclusiu dels nostres vins, una experiència única per als amants del vi.</p>
                 <p>Preu per persona: 25€</p>
                 <p>Mínim 2 persones per reserva</p>
                 <form action="/src/pack1.html">
-                    <input type="submit" value="Més Informació" />
+                    <input type="submit" value="Més Informació" class="boto" />
                 </form>
 
             </div>
@@ -57,11 +57,8 @@
                 <p>Preu per persona: 40€</p>
                 <p>Mínim 2 persones per reserva</p>
                 <form action="/src/pack2.html">
-                    <input type="submit" value="Més Informació" />
+                    <input type="submit" value="Més Informació" class="boto"/>
                 </form>
-                <!-- <form action="/src\reserva.html">
-                    <input type="submit" value="Fes la reserva ara" />
-                </form> -->
             </div>
             <div class="pack">
                 <div class="">
@@ -72,7 +69,7 @@
                 <p>Preu per persona: 60€</p>
                 <p>Mínim 2 persones per reserva</p>
                 <form action="#">
-                    <input type="submit" value="Més Informació" />
+                    <input type="submit" value="Més Informació" class="boto" />
                 </form>
             </div>
         </div>
