--- a/PAC1/src/pack2.html
+++ b/PAC1/src/pack2.html
@@ -8,8 +8,8 @@
     <title>Delícies Gourmet: Tast de Vins i Formatges</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600;700&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600;700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e92ad526ad.js" crossorigin="anonymous"></script> <!-- script per les icones -->
 </head>
 <body>
@@ -31,10 +31,47 @@
         </nav>
     </header>
     <main>
-        <div class="-img">
+        <div class="pack2-img">
             <h1>Delícies Gourmet: Tast de Vins i Formatges</h1>
         </div>
-        <div class="quiSomTxt">
+        <div class="pack-txt">
+            <div>
+                <h3>Viu des del paladar</h3>
+                <p>Endinsa't en una experiència gastronòmica única amb el nostre pack <i>Delícies Gourmet</i>. Gaudeix d'un brunch selecte on els nostres millors vins s'acompanyen d'una selecció de formatges que despertaran els teus sentits amb sabors i aromes excepcionals. </p>
+                <img src="/img/pack2_picapica.jpg" alt="Taula amb menjars i vi">
+            </div>
+            <div>
+                <h3>T'ensenyem un vídeo per saber com catar un vi</h3>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/LcdM_shS3jo?si=i9GQRzwFwZKjBmjr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div>
+                <h3>Què inclou aquest pack?</h3>
+                <ul class="inclou">
+                    <li><b>Tast guiat de vins:</b><br>Degusta alguns dels nostres vins més especials i descobreix les seves característiques, història i processos d'elaboració.</li>
+                    <li><b>Selecció de formatges gourmet:</b><br> Acompanyem cada vi amb formatges artesans de proximitat, seleccionats per potenciar-ne els sabors i oferir una experiència de maridatge excepcional.</li>
+                    <li><b>Acompanyaments especials:</b><br>Per completar l’experiència, el tast inclou pa artesà, fruits secs i confitures que harmonitzen a la perfecció amb els vins i formatges.</li>
+                </ul>
+                <img src="/img/pack2_copa_vi.jpg" alt="copa de vi i formatges" class="pack1-foto">
+            </div>
+            <div>
+                <h3>Informació pràctica</h3>
+                <ul>
+                    <li>Preu per persona: 40€</li>
+                    <li>Mínim: 2 persones per reserva</li>
+                    <li>Durada aproximada: 1 hora i 30 minuts</li>
+                </ul>
+            </div>
+            <div>
+                <h3>Reserva ara la teva experiència!</h3>
+                <p>Deixa't seduir per aquesta combinació de sabors i textures. Reserva la teva plaça i gaudeix d'un tast únic!</p>
+                <img src="/img/pack2_brindis.jpg" alt="brindis" class="pack1-foto">
+                <form action="/src\reserva.html">
+                    <input type="submit" value="Fes la reserva ara" class="boto" />
+                </form>
+            </div>
+        </div>
+        <div class="tornar-experiencies">
+            <a href="/src/experiencies.html" class="goBack">← Tornar a Experiències</a>
         </div>
     </main>
     <footer>
