--- a/PAC1/src/reserva.html
+++ b/PAC1/src/reserva.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pàgina principal de Bacus Terra">
     <link rel="icon" href="/img/monogram-hq.png">
-    <title>Reserva</title>
+    <title>Delícies Gourmet: Tast de Vins i Formatges</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600;700&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600;700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e92ad526ad.js" crossorigin="anonymous"></script> <!-- script per les icones -->
 </head>
 <body>
@@ -39,7 +39,7 @@
         </div>
         <div class="reserva-form">
             <fieldset>
-                <form action="" method="post" novalidate>
+                <form action="" method="" novalidate>
                     <legend class="title-form">Reserva la teva experiència</legend>
                     <label for="packs">Sel·lecciona el pack</label>
                     <select id="packs" name="packs" required>
@@ -58,7 +58,7 @@
                         <input type="checkbox" name="politica" value="politica" required /> Acepto les condicions i política de privacitat.
                     </label>
                     <p id="preu"></p>
-                    <input type="submit" value="Fes la teva reserva"/>
+                    <input type="submit" value="Fes la teva reserva" class="boto"/>
                 </form>
             </fieldset>
         </div>        
