--- a/PAC1/src/pack1.html
+++ b/PAC1/src/pack1.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="ca">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Pàgina principal de Bacus Terra">
-    <link rel="icon" href="/img/monogram-hq.png">
-    <title>Explora i Gaudeix: Visita + Tast Exclusiu</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600;700&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/e92ad526ad.js" crossorigin="anonymous"></script> <!-- script per les icones -->
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Pàgina principal de Bacus Terra">
+        <link rel="icon" href="/img/monogram-hq.png">
+        <title>Delícies Gourmet: Tast de Vins i Formatges</title>
+        <link rel="stylesheet" href="./style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600;700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/e92ad526ad.js" crossorigin="anonymous"></script> <!-- script per les icones -->
+    </head>
 <body>
     <header>
         <nav class="menu">
@@ -31,14 +31,47 @@
         </nav>
     </header>
     <main>
-        <div class="-img">
-            <h1>Explora i Gaudeix: Visita + Tast Exclusiu</h1>
+        <div class="pack1-img">
+            <h1>Explora i Gaudeix: Visita + Tast de Vins</h1>
         </div>
-        <div class="">
-            
-            <form action="/src\reserva.html">
-                <input type="submit" value="Fes la reserva ara" />
-            </form>
+        <div class="pack-txt">
+            <div>
+                <h3>De la Vinya al Vi: Descobreix el Vi des de l'Origen</h3>
+                <p>Vine a conèixer la nostra vinya i descobreix el procés d'elaboració del vi de primera mà. Amb el pack <i>Explora i Gaudeix</i>, coneixeràs el camí que recorre el nostre raïm, des del moment en què es planta fins que arriba a la taula.</p>
+                <img src="/img/pack1_vi_vinya.jpg" alt="vinya">
+            </div>
+            <div>
+                <h3>T'ensenyem un vídeo de la ruta</h3>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/n5C5s6gJjcU?si=lrWJj31TOXFBL0pC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div>
+                <h3>Què inclou aquest pack?</h3>
+                <ul class="inclou">
+                    <li><b>Visita guiada per la vinya:</b><br>Passeja entre les nostres vinyes i descobreix com cuidem cada cep durant tot l'any.</li>
+                    <li><b>Visita al celler:</b><br>Endinsa't a les nostres instal·lacions i aprèn com transformem el raïm en vi.</li>
+                    <li><b>Tast exclusiu:</b><br>Gaudeix d'una degustació especial dels nostres vins, descobrint-ne els sabors, aromes i característiques.</li>
+                </ul>
+                <img src="/img/pack1_copa_vi.jpg" alt="copa de vi" class="pack1-foto">
+            </div>
+            <div>
+                <h3>Informació pràctica</h3>
+                <ul>
+                    <li>Preu per persona: 25€</li>
+                    <li>Mínim: 2 persones per reserva</li>
+                    <li>Durada aproximada: 1 hora i 30 minuts</li>
+                </ul>
+            </div>
+            <div>
+                <h3>Reserva ara la teva experiència!</h3>
+                <p>No deixis escapar l'oportunitat de viure el vi com mai abans. Reserva ara i prepara't per una experiència inoblidable!</p>
+                <img src="/img/pack1_brindis.jpg" alt="brindis" class="pack1-foto">
+                <form action="/src\reserva.html">
+                    <input type="submit" value="Fes la reserva ara" class="boto" />
+                </form>
+            </div>
+        </div>
+        <div class="tornar-experiencies">
+            <a href="/src/experiencies.html" class="goBack">← Tornar a Experiències</a>
         </div>
     </main>
     <footer>
