--- a/PAC1/src/index.html
+++ b/PAC1/src/index.html
@@ -26,7 +26,7 @@
                 <li><a href="/src/reserva.html">RESERVA</a></li>
                 <li><a href="/src/experiencies.html">EXPERIÈNCIES</a></li>
                 <li><a href="/src/sobre_nosaltres.html">SOBRE NOSALTRES</a></li>
-                <li><a href="/src\enllaços.html">ENLLAÇOS</a></li>
+                <li><a href="/src/enllaços.html">ENLLAÇOS</a></li>
             </ul>
         </nav>
     </header>
@@ -44,14 +44,14 @@
                     </div>
                 </a>
                 
-                <a href="/src\experiencies.html" class="second">
+                <a href="/src/experiencies.html" class="second">
                     <div>
                         <p class="titol">Descobreix les nostres experiències</p>
                         <p>Informa't dels nostres serveis</p>
                     </div>
                 </a>
                 
-                <a href="/src\sobre_nosaltres.html" class="third">
+                <a href="/src/sobre_nosaltres.html" class="third">
                     <div>
                         <p class="titol">La nostra història</p>
                         <p>Conèix més sobre la vinya i els nostres vins</p>
