--- a/PAC1/src/pack2.html
+++ b/PAC1/src/pack2.html
@@ -26,7 +26,7 @@
                 <li><a href="/src/reserva.html">RESERVA</a></li>
                 <li><a href="/src/experiencies.html">EXPERIÈNCIES</a></li>
                 <li><a href="/src/sobre_nosaltres.html">SOBRE NOSALTRES</a></li>
-                <li><a href="/src\enllaços.html">ENLLAÇOS</a></li>
+                <li><a href="/src/enllaços.html">ENLLAÇOS</a></li>
             </ul>
         </nav>
     </header>
@@ -65,7 +65,7 @@
                 <h3>Reserva ara la teva experiència!</h3>
                 <p>Deixa't seduir per aquesta combinació de sabors i textures. Reserva la teva plaça i gaudeix d'un tast únic!</p>
                 <img src="/img/pack2_brindis.jpg" alt="brindis" class="pack1-foto">
-                <form action="/src\reserva.html">
+                <form action="/src/reserva.html">
                     <input type="submit" value="Fes la reserva ara" class="boto" />
                 </form>
             </div>
