--- a/PAC1/src/reserva.html
+++ b/PAC1/src/reserva.html
@@ -26,7 +26,7 @@
                 <li><a href="/src/reserva.html">RESERVA</a></li>
                 <li><a href="/src/experiencies.html">EXPERIÈNCIES</a></li>
                 <li><a href="/src/sobre_nosaltres.html">SOBRE NOSALTRES</a></li>
-                <li><a href="/src\enllaços.html">ENLLAÇOS</a></li>
+                <li><a href="/src/enllaços.html">ENLLAÇOS</a></li>
             </ul>
         </nav>
     </header>
