--- a/PAC1/src/experiencies.html
+++ b/PAC1/src/experiencies.html
@@ -43,9 +43,10 @@
                 <p>Vine a conèixer la nostra vinya i el nostre celler, i gaudeix d'un tast exclusiu dels nostres vins, una experiència única per als amants del vi.</p>
                 <p>Preu per persona: 25€</p>
                 <p>Mínim 2 persones per reserva</p>
-                <form action="/src/pack1.html">
+<!--                 <form action="/src/pack1.html">
                     <input type="submit" value="Més Informació" class="boto" />
-                </form>
+                </form> -->
+                <div class="boto"><a href="/src/pack1.html" > Més Informació</a></div>
 
             </div>
             <div class="pack">
@@ -56,9 +57,10 @@
                 <p>Descobreix els sabors més exquisits amb un brunch que combina els nostres vins amb una selecció de formatges gourmet.</p>
                 <p>Preu per persona: 40€</p>
                 <p>Mínim 2 persones per reserva</p>
-                <form action="/src/pack2.html">
-                    <input type="submit" value="Més Informació" class="boto"/>
-                </form>
+<!--                 <form action="/src/pack2.html">
+                    <input type="submit" value="Més Informació" class="boto-formulari"/>
+                </form> -->
+                <div class="boto"><a href="/src/pack2.html" > Més Informació</a></div>
             </div>
             <div class="pack">
                 <div class="">
