23/3 modificats els links trencats

--- a/PAC1/src/experiencies.html
+++ b/PAC1/src/experiencies.html
@@ -43,9 +43,6 @@
                 <p>Vine a conèixer la nostra vinya i el nostre celler, i gaudeix d'un tast exclusiu dels nostres vins, una experiència única per als amants del vi.</p>
                 <p>Preu per persona: 25€</p>
                 <p>Mínim 2 persones per reserva</p>
-<!--                 <form action="/src/pack1.html">
-                    <input type="submit" value="Més Informació" class="boto" />
-                </form> -->
                 <div class="boto"><a href="/src/pack1.html" > Més Informació</a></div>
 
             </div>
@@ -57,9 +54,6 @@
                 <p>Descobreix els sabors més exquisits amb un brunch que combina els nostres vins amb una selecció de formatges gourmet.</p>
                 <p>Preu per persona: 40€</p>
                 <p>Mínim 2 persones per reserva</p>
-<!--                 <form action="/src/pack2.html">
-                    <input type="submit" value="Més Informació" class="boto-formulari"/>
-                </form> -->
                 <div class="boto"><a href="/src/pack2.html" > Més Informació</a></div>
             </div>
             <div class="pack">
@@ -70,9 +64,7 @@
                 <p>Viu l'experiència completa amb una visita guiada a la vinya i una cata premium per descobrir els nostres vins més exclusius.</p>
                 <p>Preu per persona: 60€</p>
                 <p>Mínim 2 persones per reserva</p>
-                <form action="#">
-                    <input type="submit" value="Més Informació" class="boto" />
-                </form>
+                <div class="boto"><a href="#" > Més Informació</a></div>
             </div>
         </div>
         
