--- a/PAC1/src/pack1.html
+++ b/PAC1/src/pack1.html
@@ -65,9 +65,7 @@
                 <h3>Reserva ara la teva experiència!</h3>
                 <p>No deixis escapar l'oportunitat de viure el vi com mai abans. Reserva ara i prepara't per una experiència inoblidable!</p>
                 <img src="/img/pack1_brindis.jpg" alt="brindis" class="pack1-foto">
-                <form action="/src/reserva.html">
-                    <input type="submit" value="Fes la reserva ara" class="boto" />
-                </form>
+                <div class="boto"><a href="/src/reserva.html">Fes la reserva ara</a></div>
             </div>
         </div>
         <div class="tornar-experiencies">
