--- a/PAC1/src/pack2.html
+++ b/PAC1/src/pack2.html
@@ -65,9 +65,7 @@
                 <h3>Reserva ara la teva experiència!</h3>
                 <p>Deixa't seduir per aquesta combinació de sabors i textures. Reserva la teva plaça i gaudeix d'un tast únic!</p>
                 <img src="/img/pack2_brindis.jpg" alt="brindis" class="pack1-foto">
-                <form action="/src/reserva.html">
-                    <input type="submit" value="Fes la reserva ara" class="boto" />
-                </form>
+                <div class="boto"><a href="/src/reserva.html">Fes la reserva ara</a></div>
             </div>
         </div>
         <div class="tornar-experiencies">
