--- a/PAC1/src/pack1.html
+++ b/PAC1/src/pack1.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Pàgina principal de Bacus Terra">
+        <meta name="description" content="Pàgina en detall del pack número 1 de Bacus Terra">
         <link rel="icon" href="/img/monogram-hq.png">
-        <title>Delícies Gourmet: Tast de Vins i Formatges</title>
+        <title>Explora i Gaudeix: Visita + Tast de Vins</title>
         <link rel="stylesheet" href="./style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
