--- a/PAC1/src/pack2.html
+++ b/PAC1/src/pack2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Pàgina principal de Bacus Terra">
+    <meta name="description" content="Pàgina en detall del pack número 2 de Bacus Terra">
     <link rel="icon" href="/img/monogram-hq.png">
     <title>Delícies Gourmet: Tast de Vins i Formatges</title>
     <link rel="stylesheet" href="./style.css">
