24/3 errors de codi

--- a/PAC1/src/experiencies.html
+++ b/PAC1/src/experiencies.html
@@ -84,7 +84,8 @@
                 <p><a href="#">Política de <i lang="en">cookies</i></a></p>
                 <p><a href="#">Avís legal</a></p>
             </div>
+        </div>
     </footer>
+    <script src="./scripts.js"></script>
 </body>
-<script src="./scripts.js"></script>
 </html>
