--- a/PAC1/src/pack1.html
+++ b/PAC1/src/pack1.html
@@ -42,7 +42,7 @@
             </div>
             <div>
                 <h3>T'ensenyem un vídeo de la ruta</h3>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/n5C5s6gJjcU?si=lrWJj31TOXFBL0pC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/n5C5s6gJjcU?si=lrWJj31TOXFBL0pC" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div>
                 <h3>Què inclou aquest pack?</h3>
@@ -87,7 +87,8 @@
                 <p><a href="#">Política de <i lang="en">cookies</i></a></p>
                 <p><a href="#">Avís legal</a></p>
             </div>
+        </div>
     </footer>
+    <script src="./scripts.js"></script>
 </body>
-<script src="./scripts.js"></script>
 </html>
