--- a/PAC1/src/sobre_nosaltres.html
+++ b/PAC1/src/sobre_nosaltres.html
@@ -41,7 +41,6 @@
                 <p>La nostra vinya és un espai ple de vida, on la cura del sòl i el respecte pel medi ambient són la base de tot el que fem. Cada cep és tractat amb dedicació i amor per assegurar-nos que el vi que obtenim sigui de la més alta qualitat, un reflex del nostre compromís amb l'excel·lència i la sostenibilitat.</p>
                 <p>Volem oferir l'oportunitat de veure de prop les vinyes, aprendre sobre el procés d'elaboració del vi i, sobretot, viure el vi de manera directa, com mai abans. Des de la verema fins a la copa, cada pas en el nostre procés de producció és una experiència sensorial única que convidem a descobrir. Els nostres vins no només són el resultat de la terra, sinó també de la passió de la nostra família. Cada ampolla que surt de la nostra bodega carrega una història, una tradició i un amor pel que fem. T'animem a venir, caminar entre les nostres vinyes, respirar l'aire fresc de la terra i tastar els nostres vins, que són tan únics com la nostra història.</p>
                 <p>T'esperem per viure una experiència única entre vinyes!</p>
-                    </p>
                 <img src="/img/raim_quiSom.jpg" alt="">
             </div>
         </div>
@@ -61,7 +60,8 @@
                 <p><a href="#">Política de <i lang="en">cookies</i></a></p>
                 <p><a href="#">Avís legal</a></p>
             </div>
+        </div>
     </footer>
+    <script src="./scripts.js"></script>
 </body>
-<script src="./scripts.js"></script>
 </html>
