--- a/PAC1/src/pack2.html
+++ b/PAC1/src/pack2.html
@@ -42,7 +42,7 @@
             </div>
             <div>
                 <h3>T'ensenyem un vídeo per saber com catar un vi</h3>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/LcdM_shS3jo?si=i9GQRzwFwZKjBmjr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/LcdM_shS3jo?si=i9GQRzwFwZKjBmjr" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div>
                 <h3>Què inclou aquest pack?</h3>
@@ -87,7 +87,8 @@
                 <p><a href="#">Política de <i lang="en">cookies</i></a></p>
                 <p><a href="#">Avís legal</a></p>
             </div>
+        </div>
     </footer>
+    <script src="./scripts.js"></script>
 </body>
-<script src="./scripts.js"></script>
 </html>
