--- a/PAC1/src/enllaços.html
+++ b/PAC1/src/enllaços.html
@@ -16,7 +16,7 @@
     <header>
         <nav class="menu">
             <div class="logo-menu">
-                <a href="index.html"><img src="/img/bacus-terra-blanc.png" alt="logotip bacus terra"></a>
+                <a href="index.html"><img src="/img/bacus-terra-blanc.png?as=webp" alt="logotip bacus terra"></a>
             </div>
             <a href="javascript:void(0)" class="menu-toggle">
                 <i class="fa-solid fa-bars"></i>
