--- a/PAC1/src/experiencies.html
+++ b/PAC1/src/experiencies.html
@@ -16,7 +16,7 @@
     <header>
         <nav class="menu">
             <div class="logo-menu">
-                <a href="index.html"><img src="/img/bacus-terra-blanc.png" alt="logotip bacus terra"></a>
+                <a href="index.html"><img src="/img/bacus-terra-blanc.png?as=webp" alt="logotip bacus terra"></a>
             </div>
             <a href="javascript:void(0)" class="menu-toggle">
                 <i class="fa-solid fa-bars"></i>
@@ -48,7 +48,7 @@
             </div>
             <div class="pack">
                 <div class="">
-                    <img src="/img/pack2_cata_vi.jpg" alt="taula amb vins i formatges">
+                    <img src="/img/pack2_cata_vi.jpg?as=webp" alt="taula amb vins i formatges">
                     <p class="pack-name">Delícies Gourmet: Tast de Vins i Formatges</p>
                 </div>
                 <p>Descobreix els sabors més exquisits amb un brunch que combina els nostres vins amb una selecció de formatges gourmet.</p>
@@ -58,7 +58,7 @@
             </div>
             <div class="pack">
                 <div class="">
-                    <img src="/img/pack3_gourmet.jpg" alt="">
+                    <img src="/img/pack3_gourmet.jpg?as=webp" alt="">
                     <p class="pack-name">L'Experiència Completa: Visita + Cata Premium</p>
                 </div>
                 <p>Viu l'experiència completa amb una visita guiada a la vinya i una cata premium per descobrir els nostres vins més exclusius.</p>
@@ -71,7 +71,7 @@
     </main>
     <footer>
         <div class="logo-menu">
-            <a href="index.html"><img src="/img/bacus-terra-blanc.png" alt="logotip bacus terra"></a>
+            <a href="index.html"><img src="/img/bacus-terra-blanc.png?as=webp" alt="logotip bacus terra"></a>
             <p>2025-2026. Mar Domènech</p>
         </div>
         <div class="footer-content">
