--- a/PAC1/src/pack1.html
+++ b/PAC1/src/pack1.html
@@ -38,7 +38,7 @@
             <div>
                 <h3>De la Vinya al Vi: Descobreix el Vi des de l'Origen</h3>
                 <p>Vine a conèixer la nostra vinya i descobreix el procés d'elaboració del vi de primera mà. Amb el pack <i>Explora i Gaudeix</i>, coneixeràs el camí que recorre el nostre raïm, des del moment en què es planta fins que arriba a la taula.</p>
-                <img src="/img/pack1_vi_vinya.jpg" alt="vinya">
+                <img src="/img/pack1_vi_vinya.jpg?as=webp" alt="vinya">
             </div>
             <div>
                 <h3>T'ensenyem un vídeo de la ruta</h3>
@@ -51,7 +51,7 @@
                     <li><b>Visita al celler:</b><br>Endinsa't a les nostres instal·lacions i aprèn com transformem el raïm en vi.</li>
                     <li><b>Tast exclusiu:</b><br>Gaudeix d'una degustació especial dels nostres vins, descobrint-ne els sabors, aromes i característiques.</li>
                 </ul>
-                <img src="/img/pack1_copa_vi.jpg" alt="copa de vi" class="pack1-foto">
+                <img src="/img/pack1_copa_vi.jpg?as=webp" alt="copa de vi" class="pack1-foto">
             </div>
             <div>
                 <h3>Informació pràctica</h3>
@@ -64,7 +64,7 @@
             <div>
                 <h3>Reserva ara la teva experiència!</h3>
                 <p>No deixis escapar l'oportunitat de viure el vi com mai abans. Reserva ara i prepara't per una experiència inoblidable!</p>
-                <img src="/img/pack1_brindis.jpg" alt="brindis" class="pack1-foto">
+                <img src="/img/pack1_brindis.jpg?as=webp" alt="brindis" class="pack1-foto">
                 <div class="boto"><a href="/src/reserva.html">Fes la reserva ara</a></div>
             </div>
         </div>
@@ -74,7 +74,7 @@
     </main>
     <footer>
         <div class="logo-menu">
-            <a href="index.html"><img src="/img/bacus-terra-blanc.png" alt="logotip bacus terra"></a>
+            <a href="index.html"><img src="/img/bacus-terra-blanc.png?as=webp" alt="logotip bacus terra"></a>
             <p>2025-2026. Mar Domènech</p>
         </div>
         <div class="footer-content">
